--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,66 @@
 <head>
     <title>test</title>
     <link href="/static/styles.css" rel="stylesheet"/>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.2.3/dist/cerulean/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+
 </head>
 
 <body>
-    <form action="" method="post">
+    
+    <div class="jumbotron vertical-padding">
+        <p>2023 BYU Raspberry Pi Competition</p>
+        <h1 class="display-3">Team WEIE</h1>
+        <p class="lead">(What Even Is Electricity)</p>
+        <hr class="my-4">
+        <p class="lead">Load Balancer</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut eleifend odio. 
+            Vivamus leo velit, dictum a sapien a, lacinia tincidunt odio. 
+            Phasellus nisl felis, consequat quis ipsum quis, maximus lobortis magna. 
+            Sed vestibulum eget nulla at ultrices. Donec eros justo, ultrices ut mattis quis, 
+            vulputate sit amet orci. 
+        </p>
+
+        <p>
+          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        </p>
+    </div>
+
+    <div class="body">
+        <div class = "wrapper">
+            <div id="task1" class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+                <div class="card-body">
+                    <h4 class="card-title">Primary card title</h4>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+            </div>
+            <div id="task2" class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+                <div class="card-body">
+                    <h4 class="card-title">Primary card title</h4>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+            </div>
+            <div id="task3" class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+                <div class="card-header">Header</div>
+                <div class="card-body">
+                    <h4 class="card-title">Primary card title</h4>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+            </div>
+            <div id="task4" class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+                <div class="card-header">Header</div>
+                <div class="card-body">
+                    <h4 class="card-title">Primary card title</h4>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+            </div>
+        </div>
+            
+    </div>
+
+        <!-- <form action="" method="post">
         <div class="input text">
             <label for="python_file">{{form.python_file.label}}</label>
             {{form.python_file}}
@@ -15,7 +71,14 @@
         <div class="input submit">
             <input type="submit" value="Submit">
         </div>
-    </form>
+    </form> -->
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="/static/jobs.js"></script>
+
 </body>
 
 </html>
