Styles and button functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,26 +33,26 @@
 
     <div class="body">
         <div class = "wrapper">
-            <div id="task1" class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+            <div id="task1" class="card text-white bg-primary mb-3" style="max-width: 20rem;" role="button">
                 <div class="card-body">
                     <h4 class="card-title">Primary card title</h4>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
-            <div id="task2" class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+            <div id="task2" class="card text-white bg-primary mb-3" style="max-width: 20rem;" role="button">
                 <div class="card-body">
                     <h4 class="card-title">Primary card title</h4>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
-            <div id="task3" class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+            <div id="task3" class="card text-white bg-primary mb-3" style="max-width: 20rem;" role="button">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                     <h4 class="card-title">Primary card title</h4>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
-            <div id="task4" class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+            <div id="task4" class="card text-white bg-primary mb-3" style="max-width: 20rem;" role="button">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                     <h4 class="card-title">Primary card title</h4>
